fix spacing issues

--- a/cfgov/unprocessed/css/pages/ask.less
+++ b/cfgov/unprocessed/css/pages/ask.less
@@ -38,6 +38,15 @@
         ol:last-child {
             margin-bottom: 0 !important;
         } 
+    }
+
+    .category-button {
+        .respond-to-max(@bp-xs-max, {
+            margin-top: unit( ( @grid_gutter-width / 2 ) / @base-font-size-px, em );
+            width: 100%;
+            text-align: center;
+        });
+
     }   
 }
 
@@ -98,6 +107,12 @@
 }
 
 .ask-cfpb-page {
+    .m-pagination {
+        .respond-to-max(@bp-xs-max, {
+            height: auto;
+        });
+    }
+
     .search-results {
         max-width: @bp-xs-max;    
     }
@@ -254,18 +269,21 @@
 }
 
 .ask-cfpb-page__search {
-    .o-search-bar form {
-        max-width: @bp-xs-max;
+    .o-search-bar {
+        .respond-to-max( @bp-xs-max, {
+            padding-bottom: unit( @grid_gutter-width / @base-font-size-px, em );
+        } );
+
+        form {
+            max-width: @bp-xs-max;
+        }
     }
 
     .question_summary {
         padding: unit( ( @grid_gutter-width / 2 ) / @base-font-size-px, em ) 0;
 
         .respond-to-min(@bp-med-min, {
-            padding:  unit( @grid_gutter-width / @base-font-size-px, em )
-                      0
-                      unit( ( @grid_gutter-width / 2 ) / @base-font-size-px, em )
-                      0;
+            padding:  unit( @grid_gutter-width / @base-font-size-px, em ) 0;
         });
 
         .question_title a {
